adding proof of concept glimmer component that fetches data

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@ layout: default
 	<div class="container">
 		<p>This is a proof of concept static site using Jekyll and Contentful.</p>
 		<hr />
+		
+		<!-- POC Glimmer component -->
+		<div id="app"></div>
+		<!-- -->
+
+		<hr />
 		<div class="row">
 
 			{% for card in site.data.contentful.spaces.bcorporation.card %}
