first pass with travis and html proofer

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ layout: default
 					</span>
 					<h3>{{ card.headline.en-US }}</h3>
 					<p>{{ card.description.en-US }}</p>
-					<a href="#" class="button button-style1">Read More</a>
+					<a href="https://google.com" class="button button-style1">Read More</a>
 				</section>
 			{% endfor %}
 
@@ -37,8 +37,8 @@ layout: default
 			<div class="row">
 				{% for event in site.data.contentful.spaces.bcorporation.event limit:2 %}
 					<section class="6u">
-						<a href="#" class="image full">
-							<img src="/assets/images/pic01.jpg" alt="">
+						<a href="https://google.com" class="image full">
+							<img src="/assets/images/pic01.jpg" alt="some alt text">
 						</a>
 						<header>
 							<h2>{{ event.title.en-US }}</h2>
